added manage developer project popup

--- a/src/app/component/edit-popup/edit-popup.component.html
+++ b/src/app/component/edit-popup/edit-popup.component.html
@@ -12,8 +12,6 @@
         <input matInput formControlName="lastname" />
       </mat-form-field>
 
-      
-
       <mat-form-field>
         <mat-label>Field</mat-label>
         <select matNativeControl formControlName="field">
@@ -21,8 +19,7 @@
           <option value="Backend">Backend</option>
           <option value="Full-Stack">Full-Stack</option>
           <option value="AI/ML">AI/ML</option>
-          <option value="DevOps">WAITING</option>
-  
+          <option value="DevOps">DevOps</option>
         </select>
       </mat-form-field>
     </mat-dialog-content>
