--- a/src/app/component/projects/projects.component.html
+++ b/src/app/component/projects/projects.component.html
@@ -1,42 +1,64 @@
 <div class="mat-elevation-z8">
   <table mat-table [dataSource]="dataSource">
-
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Title </th>
-      <td mat-cell *matCellDef="let project"> {{project.name}} </td>
+      <th mat-header-cell *matHeaderCellDef>Title</th>
+      <td mat-cell *matCellDef="let project">{{ project.name }}</td>
     </ng-container>
 
     <ng-container matColumnDef="start">
-      <th mat-header-cell *matHeaderCellDef> Start Date </th>
-      <td mat-cell *matCellDef="let project"> {{project.start}} </td>
+      <th mat-header-cell *matHeaderCellDef>Start Date</th>
+      <td mat-cell *matCellDef="let project">{{ project.start }}</td>
     </ng-container>
 
-
     <ng-container matColumnDef="end">
-      <th mat-header-cell *matHeaderCellDef> End Date </th>
-      <td mat-cell *matCellDef="let project"> {{project.end}} </td>
+      <th mat-header-cell *matHeaderCellDef>End Date</th>
+      <td mat-cell *matCellDef="let project">{{ project.end }}</td>
     </ng-container>
 
     <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef> Status </th>
-      <td mat-cell *matCellDef="let project"> {{project.status}} </td>
+      <th mat-header-cell *matHeaderCellDef>Status</th>
+      <td mat-cell *matCellDef="let project">{{ project.status }}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="manageMembers">
+      <th mat-header-cell *matHeaderCellDef>manage Members</th>
+      <td mat-cell *matCellDef="let project">
+        <button
+          mat-mini-fab
+          color="primary"
+          (click)="manageMembers(project)"
+          aria-label="Example icon button with a home icon"
+        >
+          <mat-icon>...</mat-icon>
+        </button>
+      </td>
     </ng-container>
 
     <ng-container matColumnDef="actions">
-      <th mat-header-cell *matHeaderCellDef> Actions </th>
+      <th mat-header-cell *matHeaderCellDef>Actions</th>
       <td mat-cell *matCellDef="let project">
-        <button mat-mini-fab color="primary" (click)="editProject(project)" aria-label="Example icon button with a home icon">
+        <button
+          mat-mini-fab
+          color="primary"
+          (click)="editProject(project)"
+          aria-label="Example icon button with a home icon"
+        >
           <mat-icon>edit</mat-icon>
         </button>
 
-        <button mat-mini-fab color="warn" (click)="deleteProject(project.idAsString)" aria-label="Example icon button with a filter list icon">
+        <button
+          mat-mini-fab
+          color="warn"
+          (click)="deleteProject(project.idAsString)"
+          aria-label="Example icon button with a filter list icon"
+        >
           <mat-icon>delete</mat-icon>
         </button>
       </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
   </table>
 
   <div class="container">
@@ -45,9 +67,10 @@
     </button>
   </div>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 20]"
-                 showFirstLastButtons
-                 aria-label="Select page of projects">
+  <mat-paginator
+    [pageSizeOptions]="[5, 10, 20]"
+    showFirstLastButtons
+    aria-label="Select page of projects"
+  >
   </mat-paginator>
-
 </div>
